k8s/overlays/aks/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biblioteca-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: bibliotechu.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biblioteca-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - bibliotechu.duckdns.org
      secretName: bibliotechu-frontend-tls
